# nexus

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .railwayignore  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Procfile  README.md  docker-compose.yml  docker-entrypoint.sh  fly.toml  pyproject.toml  railway.json  start.bat  supabase_rls_fix.sql  vercel.json
.github/workflows/: ci.yml  keepalive.yml
_archive/docs-v0/: DEPLOYMENT_AND_REVIEW.md  FINAL_PLAN.md  NEXUS-project-dna.json  SKILLS_CURATED_FOR_NEXUS.md  SKILLS_REGISTRY.md  SYSTEM_DESIGN.md  TASKS.md  skills.json
_archive/nexus-backend-v0/: .env.example  config.py  main.py  requirements.txt
_archive/nexus-backend-v0/api/: chat.py  health.py  insights.py  upload.py
_archive/nexus-backend-v0/core/: contradiction.py  embeddings.py  ingestion.py  llm.py  retrieval.py  transparency.py
_archive/nexus-backend-v0/db/: migrations.sql  supabase_store.py
_archive/nexus-backend-v0/demo_data/: README.md
_archive/nexus-backend-v0/eval/: ragas_eval.py  test_cases.json
_archive/nexus-backend-v0/tests/: test_health.py
demo_corpus/: Product_Roadmap_2024.txt  Q3_2023_Financial_Summary.txt  Q4_2023_Financial_Summary.txt  TechCorp_HR_Policy_2023.txt  TechCorp_HR_Policy_2024.txt
deploy/: huggingface-spaces.md
nexus-frontend/: .env.local.example  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
nexus-frontend/app/: globals.css  layout.tsx  page.tsx
nexus-frontend/app/[locale]/: layout.tsx
nexus-frontend/app/chat/: page.tsx
nexus-frontend/components/: ChatWindow.tsx  ConfidenceBar.tsx  ContradictionBadge.tsx  DocumentSummaryCard.tsx  DocumentZone.tsx  GroundingPanel.tsx  InsightSidebar.tsx  LandingHero.tsx  LanguageSwitcher.tsx  NeuralCanvas.tsx  ParticleField.tsx  SmoothScroll.tsx  SourceCard.tsx
nexus-frontend/lib/: api.ts  blobStore.ts
nexus-frontend/messages/: en.json  fr.json
src/nexus/: __init__.py  config.py  logging.py
src/nexus/api/: __init__.py  main.py  routes.py
src/nexus/features/: __init__.py  analyzer.py  contradiction.py  gap_detector.py  insight_engine.py  transparency.py
src/nexus/index/: __init__.py  bm25_index.py  hybrid_retriever.py  supabase_store.py
src/nexus/ingest/: __init__.py  chunker.py  loaders.py  metadata.py
src/nexus/rag/: __init__.py  chain.py  embeddings.py  (+1 more)
tests/eval/: __init__.py  ragas_eval.py  results.json  test_cases.json
tests/fixtures/: test.docx  test.eml  test.pptx  test.rtf
tests/integration/: test_e2e.py
tests/unit/: test_analyzer.py  test_bm25.py  test_chain.py  test_config.py  test_hybrid_retriever.py  test_ingest.py  test_transparency.py
(+3 files in other folders)
